@@ -2,46 +2,40 @@ package org.example.LogicComponents;
 
 import java.util.ArrayList;
 import java.util.TreeMap;
-import java.awt.Graphics;
 
 public class GameMap{
     public int width, height;
     private Player player;
     private int cameraOffsetX=0, cameraOffsetY=0;
-    private int panelWidth, panelHeight;
+    private int windowWidth, windowHeight;
     private TreeMap<Integer, ArrayList<GameObject>> layers;    // TreeMap to hold GameObjects by layer, 1 being lowest
 
-    public GameMap(int width, int height) {
+    public GameMap(int width, int height, int windowWidth, int windowHeight) {
         this.width = width;
         this.height = height;
+        this.windowWidth = windowWidth;
+        this.windowHeight = windowHeight;
         layers = new TreeMap<>();
         GameObject.gameMap=this;    //sets a reference to itself from all gameobjects
     }
 
-    public void setPanelSize(int panelWidth, int panelHeight){
-        this.panelWidth=panelWidth;
-        this.panelHeight=panelHeight;
-    }
+
+    public int height(){ return height;}
+
+    public int width(){ return width;}
 
 
-    public int height(){
-        return height;
-    }
-
-    public int width(){
-        return width;
-    }
-
-
+    //updates position of all objects
     public void update() {  //updates position of all objects
         for (ArrayList<GameObject> objects : layers.values()) {
             for (GameObject obj : objects) {
                 obj.updatePosition();
             }
         }
-        //adjustCamera();
+        adjustCamera();
     }
 
+    //draws all the objects with updated positions
     public void draw() {  //draws the new updated positions for all objects
         for (ArrayList<GameObject> objects : layers.values()) {
             for (GameObject obj : objects) {
@@ -50,14 +44,17 @@ public class GameMap{
         }
     }
 
+
+    //method to adjust the camera so that the player is always in the middle
     private void adjustCamera(){
         // Calculate target camera position to center player
-        int targetCameraX = player.xpos + player.width / 2 - panelWidth / 2;
-        int targetCameraY = player.ypos + player.height / 2 - panelHeight / 2;
+        int targetCameraX = player.xpos + player.width / 2 - windowWidth / 2;
+        int targetCameraY = player.ypos + player.height / 2 - windowHeight / 2;
 
         // Clamp to map boundaries
-        targetCameraX = Math.max(0, Math.min(targetCameraX, width - panelWidth));
-        targetCameraY = Math.max(0, Math.min(targetCameraY, height - panelHeight));
+        targetCameraX = Math.clamp(targetCameraX, 0, width - windowWidth);
+        targetCameraY = Math.clamp(targetCameraY, 0, height - windowHeight);
+
 
         // Smoothly move camera toward target instead of jumping
         if (cameraOffsetX < targetCameraX) {
@@ -74,13 +71,15 @@ public class GameMap{
     }
 
 
+    //add a gameobject to the wanted layer
     public GameObject addGameObject(GameObject obj, int layer) {
-        layers.putIfAbsent(layer, new ArrayList<>());   //creates new layer if it doesnt already exist
+        layers.putIfAbsent(layer, new ArrayList<>());   //creates new layer if it doesn't already exist
         layers.get(layer).add(obj);
-        obj.setLayerObjects(layers.get(layer));  //creates a copy of the array whith all the objects in the same layer
+        obj.setLayerObjects(layers.get(layer));  //creates a copy of the array with all the objects in the same layer
         return obj;
     }
 
+    //add a player to the wanted layer
     public GameObject addPlayer(Player player, int layer){  //keeps track of the player object when added
         this.player=player;
         return addGameObject(player, layer);
